# searchgov

./: .dockerignore  .env.example  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  api_main.py  docker-compose.yml  main.py  pyproject.toml
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: api.ts  auth.ts  fuzzy.ts
frontend/src/lib/components/: ConfidenceSlider.svelte  InfoTip.svelte  NameVariantZones.svelte  PathTimeline.svelte  PersonSearch.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/connectivity/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/organisation/: +page.svelte
frontend/src/routes/progression/: +page.svelte
notebooks/: cleaning.ipynb  graph_ingestion.ipynb
src/: state.py
src/api/: __init__.py  dependencies.py
src/api/routers/: analytics.py  graph.py  organisations.py  people.py  system.py
src/api/schemas/: analytics.py  graph.py  organisations.py  people.py
src/app/: temporal_graph.py
src/auth/: __init__.py
src/common/: utils.py
src/database/postgres/: connection.py  schema.py
src/frontend/: registry.py  theme.py
src/frontend/components/: profile_display.py
src/frontend/components/visualizations/: org_charts.py
src/frontend/utils/: views.py
src/frontend/views/: base.py  connectivity.py  evolution.py  home_page.py  organization.py  progression.py
src/middleware/: __init__.py  auth.py  correlation.py  nicegui_auth.py  request_logging.py
src/orgs/: orgs.py
src/preprocess/: names.py
src/repositories/: base.py  employment.py  organisations.py  people.py
src/services/: analytics.py  disambiguation.py  employment.py  graph.py  organisations.py  query.py
tests/: test_clean.py
